# image-border-extender-web-test

./: .gitignore  Dockerfile  Dockerfile-bkup  Dockerfile.development  README.md  docker-compose.yml  generate_thumbnails.py  local2run.py  pyproject.toml  requirements.txt  run.py  test.py  testapi.py
.cloudbase/container/: debug.json
border_extender/: __init__.py  color_extract.py  dao.py  model.py  views.py
border_extender/effects/: filter_utils.py  filters.py  filters_nightly.py  formats.py
border_extender/templates/: index.html  index.html.new
utils/: split_photos.py
wxcloudrun/: __init__.py  abandonlocalrun.py  add_bd copy.py  add_bd.py  assets_data.py  color_extract.py  localrun.py  response.py  views-cloudversion.py  views.py
wxcloudrun/effects/: __init__.py  filter_utils.py  filters.py  filters_nightly.py  formats.py  lut_utils.py
